; ModuleID = '/home/carl/AnghaBench/sqlcipher/tool/extr_lemon.c_Configtable_find.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/tool/extr_lemon.c_Configtable_find.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, %struct.TYPE_3__** }
%struct.TYPE_3__ = type { %struct.config*, %struct.TYPE_3__* }
%struct.config = type { i32 }

@x4a = common dso_local global %struct.TYPE_4__* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.config* @Configtable_find(%struct.config* %0) #0 {
  %2 = alloca %struct.config*, align 8
  %3 = alloca %struct.config*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_3__*, align 8
  store %struct.config* %0, %struct.config** %3, align 8
  %6 = load %struct.TYPE_4__*, %struct.TYPE_4__** @x4a, align 8
  %7 = icmp eq %struct.TYPE_4__* %6, null
  br i1 %7, label %8, label %9

8:                                                ; preds = %1
  store %struct.config* null, %struct.config** %2, align 8
  br label %51

9:                                                ; preds = %1
  %10 = load %struct.config*, %struct.config** %3, align 8
  %11 = call i32 @confighash(%struct.config* %10)
  %12 = load %struct.TYPE_4__*, %struct.TYPE_4__** @x4a, align 8
  %13 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 8
  %15 = sub nsw i32 %14, 1
  %16 = and i32 %11, %15
  store i32 %16, i32* %4, align 4
  %17 = load %struct.TYPE_4__*, %struct.TYPE_4__** @x4a, align 8
  %18 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %17, i32 0, i32 1
  %19 = load %struct.TYPE_3__**, %struct.TYPE_3__*** %18, align 8
  %20 = load i32, i32* %4, align 4
  %21 = sext i32 %20 to i64
  %22 = getelementptr inbounds %struct.TYPE_3__*, %struct.TYPE_3__** %19, i64 %21
  %23 = load %struct.TYPE_3__*, %struct.TYPE_3__** %22, align 8
  store %struct.TYPE_3__* %23, %struct.TYPE_3__** %5, align 8
  br label %24

24:                                               ; preds = %37, %9
  %25 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %26 = icmp ne %struct.TYPE_3__* %25, null
  br i1 %26, label %27, label %41

27:                                               ; preds = %24
  %28 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %29 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %28, i32 0, i32 0
  %30 = load %struct.config*, %struct.config** %29, align 8
  %31 = bitcast %struct.config* %30 to i8*
  %32 = load %struct.config*, %struct.config** %3, align 8
  %33 = bitcast %struct.config* %32 to i8*
  %34 = call i64 @Configcmp(i8* %31, i8* %33)
  %35 = icmp eq i64 %34, 0
  br i1 %35, label %36, label %37

36:                                               ; preds = %27
  br label %41

37:                                               ; preds = %27
  %38 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %39 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %38, i32 0, i32 1
  %40 = load %struct.TYPE_3__*, %struct.TYPE_3__** %39, align 8
  store %struct.TYPE_3__* %40, %struct.TYPE_3__** %5, align 8
  br label %24

41:                                               ; preds = %36, %24
  %42 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %43 = icmp ne %struct.TYPE_3__* %42, null
  br i1 %43, label %44, label %48

44:                                               ; preds = %41
  %45 = load %struct.TYPE_3__*, %struct.TYPE_3__** %5, align 8
  %46 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %45, i32 0, i32 0
  %47 = load %struct.config*, %struct.config** %46, align 8
  br label %49

48:                                               ; preds = %41
  br label %49

49:                                               ; preds = %48, %44
  %50 = phi %struct.config* [ %47, %44 ], [ null, %48 ]
  store %struct.config* %50, %struct.config** %2, align 8
  br label %51

51:                                               ; preds = %49, %8
  %52 = load %struct.config*, %struct.config** %2, align 8
  ret %struct.config* %52
}

declare dso_local i32 @confighash(%struct.config*) #1

declare dso_local i64 @Configcmp(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
